--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>新逸传媒 - 案例详情</title>
+    <title>Title</title>
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
                     <a href="">案例<u></u></a>
                     <a href="">我们<u></u></a>
                     <a href="">合作<u></u></a>
-                        <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=583514368&site=qq&menu=yes"><img border="0" src="imgs/qq.png?p=2:583514368:52" alt="点击这里给我发消息" title="点击这里给我发消息"/><button>在线设计咨询</button></a>
+                    <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=583514368&site=qq&menu=yes"><img border="0" src="imgs/qq.png?p=2:583514368:52" alt="点击这里给我发消息" title="点击这里给我发消息"/><button>在线设计咨询</button></a>
 
                 </dd>
             </dl>
@@ -25,17 +25,13 @@
 
     </div>
 </div>
-<div class="case-content">
+<div class="no-found">
+    <img src="imgs/404_03.jpg" alt=""><br />
+    <span>抱歉你访问的页面受伤了</span><br />
+    <span>回首页看看吧！！</span><br />
+    <a href="/">返回首页</a>
 </div>
-<div class="page">
-    <p>
-        Finite Space, Infinite Design | From XINYI
-    </p>
-    <section>
-        <a href="">上一条：世纪佳缘APP设计</a>
-        <a href="">下一条：鱼乐会APP设计</a>
-    </section>
-</div>
+
 <div class="contact-wrap">
     <div class="contact">
         <ul>
