--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>新逸传播 - 404</title>
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
@@ -45,7 +45,7 @@
             </li>
             <li>
                 <span>商务邮箱</span>
-                <small>gemini_0602@163.com</small>
+                <small>xinyiucd@163.com</small>
             </li>
             <li>
                 <img src="imgs/logo-white.png" alt=""><br />
